# notebook-on-kube

./: .dockerignore  .gitignore  Dockerfile  README.md  index.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker.yaml  helm.yaml  release.yaml  test.yaml
artwork/: notebook-on-kube.drawio
chart/jupyter-notebook/: Chart.yaml  values.yaml
chart/jupyter-notebook/templates/: _helpers.tpl  ingress.yaml  secret.yaml  service.yaml  statefulset.yaml
deploy/notebook-on-kube/: Chart.yaml  values.yaml
deploy/notebook-on-kube/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
helm-chart/jupyter-notebook/: Chart.yaml  values.yaml
helm-chart/jupyter-notebook/templates/: _helpers.tpl  ingress.yaml  service.yaml  statefulset.yaml
helm-chart/notebook-on-kube/: values.yaml
helm-chart/notebook-on-kube/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
src/notebook_on_kube/: __init__.py  main.py  utils.py
templates/: index.html  new_notebook.html  notebooks.html
tests/: test_api.py  test_utils.py
ui/: index.html  new_notebook.html  notebooks.html
