[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-on-kube"
version = "0.1.4"
description = "A tool to deploy Notebooks on Kubernetes."
readme = "README.md"
authors = [
  { name="machine424", email="ayoubmrini424@gmail.com" },
]
requires-python = ">=3.10"

dependencies = [
    "python-multipart",
    "fastapi",
    "uvicorn",
    "pyjwt",
    "jinja2",
    "ruamel.yaml"
]

[project.scripts]
notebook-on-kube = "notebook_on_kube.main:run"

[project.optional-dependencies]
test = ["black", "isort", "flake8", "mypy", "pytest", "pytest-mock", "requests"]

[project.urls]
"Homepage" = "https://github.com/machine424/notebook-on-kube"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.10"
exclude = "tests"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
show_error_codes = true
